# ThreatCode

./: .gitignore  CHANGELOG.md  Makefile  OWASP_AUDIT_REPORT.md  README.md  mkdocs.yml  pyproject.toml
.github/actions/threatcode/: action.yml
.github/workflows/: ci.yml
bitbucket/: pipe.yml
docs/: api-reference.md  architecture.md  cicd.md  configuration.md  getting-started.md  index.md  mitre-attack.md  security.md  writing-rules.md
src/threatcode/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  ignore.py
src/threatcode/engine/: hybrid.py  mitre.py  stride.py
src/threatcode/formatters/: _utils.py  attack_navigator.py  bitbucket.py  cyclonedx.py  diagram.py  diff.py  json_out.py  markdown.py  sarif.py
src/threatcode/image/: __init__.py  app_deps.py  auth.py  layer.py  misconfig.py  os_detect.py  reference.py  registry.py  scanner.py
src/threatcode/ir/: boundaries.py  edges.py  graph.py  nodes.py
src/threatcode/models/: __init__.py  analysis.py  finding.py  report.py  threat.py
src/threatcode/parsers/: __init__.py  base.py  cloudformation.py  dockerfile.py  helm.py  kubernetes.py  lockfile.py  terraform_hcl.py  terraform_plan.py
src/threatcode/scanner/: __init__.py  fs.py  repo.py
tests/: conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_ignore.py  test_security.py
tests/fixtures/cloudformation/: insecure_stack.yml
tests/fixtures/docker/: insecure.Dockerfile  multistage.Dockerfile  secure.Dockerfile
tests/fixtures/kubernetes/: insecure_deployment.yml  multi_resource.yml  secure_deployment.yml
tests/fixtures/lockfiles/: go.sum  package-lock.json  requirements.txt
tests/fixtures/realistic/: 01_aws_ecommerce_platform.json  02_azure_kubernetes_cluster.tf  03_aws_data_pipeline.yaml  04_aws_java_microservices.json  05_hybrid_vpn_datacenter.tf  06_aws_serverless_api.yaml  07_azure_webapp_java.tf  08_aws_ml_training_platform.json  09_aws_healthcare_hipaa.yaml  10_aws_gaming_backend.json
tests/fixtures/secrets/: clean_file.py  has_secrets.py
tests/fixtures/terraform/: multi_service_insecure.plan.json  simple.tf  (+2 more)
tests/test_engine/: test_aws_new_rules.py  test_azure_new_rules.py  test_docker_rules.py  test_full_scan.py  test_gcp_new_rules.py  test_hybrid.py  test_k8s_rules.py  test_license_scanner.py  test_llm_client.py  test_llm_parser.py  test_matcher.py  test_mitre.py  test_os_advisories.py  test_os_advisories_new.py  test_redactor.py  test_rule_count.py  test_secret_rules.py  test_secret_scanner.py  test_version.py  test_vuln_scanner.py
tests/test_formatters/: test_attack_navigator.py  test_bitbucket.py  test_cyclonedx.py  test_diagram.py  test_diff.py  test_json_out.py  test_markdown.py  test_sarif.py
tests/test_image/: test_app_deps.py  test_auth.py  test_layer.py  test_misconfig.py  test_os_detect.py  test_packages.py  test_reference.py  test_registry.py  test_scanner_integration.py
tests/test_ir/: test_graph.py  test_nodes.py
tests/test_models/: test_finding.py  test_report.py  test_threat.py
tests/test_parsers/: test_cloudformation.py  test_dockerfile.py  test_helm.py  test_kubernetes.py  test_lockfile.py  test_lockfile_new.py  test_parser_registry.py  test_terraform_hcl.py  test_terraform_plan.py
tests/test_scanner/: test_fs.py  test_repo.py
(+95 files in other folders)
