[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threatcode"
version = "0.4.3"
description = "Threat Model as Code — automated threat modeling from Infrastructure-as-Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ThreatCode Contributors" }]
keywords = ["security", "threat-modeling", "stride", "terraform", "iac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1,<9",
    "pydantic>=2.0,<3",
    "python-hcl2>=4.3,<5",
    "pyyaml>=6.0.1,<7",
    "networkx>=3.1,<4",
    "anthropic>=0.39,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15",
    "mypy>=1.5",
    "pip-audit>=2.6",
    "types-networkx>=3.1",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocs-autorefs",
    "mkdocstrings[python]",
]

[project.scripts]
threatcode = "threatcode.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
